
ADDED:

* Added the get_upload utility for downloading uploaded files.

* Added "extra_data" field to checker results.

* Added tutor.read_checker_result for quickly reading checker results.

* Added csq_npoints as an option to the "pythoncode" question type.  If
  specified, it overrides any point values assigned to the individual test
  cases.

CHANGED:

* The "fileupload" question type now uses get_upload to download user files,
  rather than a data URI.

* Changes to make sure that files are always closed after being opened.

DEPRECATED:

REMOVED:

FIXED:

* Fixed an issue with the "expression" question type, where overzealous type
  checking led to some correct answers being marked as incorrect.

SECURITY:

* Fixed an issue whereby get_upload could be used to read arbitrary files from
  disk via a carefully constructed request.

DOCUMENTATION:


##################
# Version 11.0.4 #
##################

FIXED:

* Fixed issue with matrix comparison in expression question type.

* Fixed typo (SyntaxError) in handout handler.


##################
# Version 11.0.3 #
##################

FIXED:

* Use https://github.com/aaugustin/websockets for websocket connections.

REMOVED:

* Removed the included simple websockets implementation.

* Remove more traces of the abandoned queue.


##################
# Version 11.0.2 #
##################

FIXED:

* Moving a file from "running" to "results" in the checker is now implemented
  as an atomic operation, to avoid the potential for corrupted results files.


##################
# Version 11.0.1 #
##################

FIXED:

* Changes to the way the "reporter" process handles websocket connections.


##################
# Version 11.0.0 #
##################

ADDED:

* Added script to migrate SQLite logs (and checker) to new format.

CHANGED:

* Logs are now, once again, stored in catsoopdb format.  No other options.

* The checker's state is now stored via the filesystem, rather than through
  SQLite.
